--- a/dev/_includes/announcements.html
+++ b/dev/_includes/announcements.html
@@ -1,4 +1,4 @@
-    {% assign all_events = site.lectures | concat: site.events %}
+    {% assign all_events = site.events | concat: site.lectures %}
     {% assign all_events = all_events | concat: site.assignments %}
 
     {% assign events_to_show = "" | split: "" %}
