--- a/dev/_includes/prac_links.html
+++ b/dev/_includes/prac_links.html
@@ -1,18 +1,22 @@
 <div>
     {% if include.prac.notes %}
-    [<a title="Download notes (zip)" href="
-    {% if include.prac.notes contains '://' %}
-      {{ include.prac.notes }} 
+	{% for note in include.prac.notes %}
+    [<a href="
+    {% if note.link contains '://' %}
+      {{ note.link }} 
     {% else %}
-      {{ include.prac.notes | prepend: site.baseurl }} 
-    {% endif %}">notes</a>]
+      {{ note.link | prepend: site.baseurl }} 
+    {% endif %}">{{ note.name }}</a>]
+	{% endfor %}
     {% endif %}
     {% if include.prac.codes %}
-    [<a title="Download codes (zip)" href="
-    {% if include.prac.codes contains '://' %}
-      {{ include.prac.codes }} 
+	{% for code in include.prac.codes %}
+    [<a href="
+    {% if code.link contains '://' %}
+      {{ code.link }} 
     {% else %}
-      {{ include.prac.codes | prepend: site.baseurl }} 
-    {% endif %}">codes</a>]
+      {{ code.link | prepend: site.baseurl }} 
+    {% endif %}">{{ code.name }}</a>]
+	{% endfor %}
     {% endif %}
 </div>
