lecture 04 and 05 added
but it wants some works

--- a/dev/_includes/lecture_links.html
+++ b/dev/_includes/lecture_links.html
@@ -1,5 +1,5 @@
 <div>
-    [<a title="Download slides (pdf)" href="
+    [<a title="Download slides" href="
     {% if include.lecture.slides contains '://' %}
       {{ include.lecture.slides }} 
     {% else %}
